; ModuleID = '/home/carl/AnghaBench/freebsd/sys/kern/extr_subr_stats.c_stats_v1_blob_init.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/kern/extr_subr_stats.c_stats_v1_blob_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.statsblobv1 = type { i32 }

@ntpl = common dso_local global i64 0, align 8
@EINVAL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @stats_v1_blob_init(%struct.statsblobv1* %0, i64 %1, i64 %2) #0 {
  %4 = alloca %struct.statsblobv1*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  store %struct.statsblobv1* %0, %struct.statsblobv1** %4, align 8
  store i64 %1, i64* %5, align 8
  store i64 %2, i64* %6, align 8
  store i32 0, i32* %7, align 4
  %8 = call i32 (...) @TPL_LIST_RLOCK()
  %9 = load %struct.statsblobv1*, %struct.statsblobv1** %4, align 8
  %10 = icmp eq %struct.statsblobv1* %9, null
  br i1 %10, label %15, label %11

11:                                               ; preds = %3
  %12 = load i64, i64* %5, align 8
  %13 = load i64, i64* @ntpl, align 8
  %14 = icmp sge i64 %12, %13
  br i1 %14, label %15, label %17

15:                                               ; preds = %11, %3
  %16 = load i32, i32* @EINVAL, align 4
  store i32 %16, i32* %7, align 4
  br label %22

17:                                               ; preds = %11
  %18 = load %struct.statsblobv1*, %struct.statsblobv1** %4, align 8
  %19 = load i64, i64* %5, align 8
  %20 = load i64, i64* %6, align 8
  %21 = call i32 @stats_v1_blob_init_locked(%struct.statsblobv1* %18, i64 %19, i64 %20)
  store i32 %21, i32* %7, align 4
  br label %22

22:                                               ; preds = %17, %15
  %23 = call i32 (...) @TPL_LIST_RUNLOCK()
  %24 = load i32, i32* %7, align 4
  ret i32 %24
}

declare dso_local i32 @TPL_LIST_RLOCK(...) #1

declare dso_local i32 @stats_v1_blob_init_locked(%struct.statsblobv1*, i64, i64) #1

declare dso_local i32 @TPL_LIST_RUNLOCK(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
